# python-best-practices-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_module}}/: .coveragerc  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  data_fib.py  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py
{{cookiecutter.project_module}}/.github/workflows/: publish-docker.yml  test.yml
{{cookiecutter.project_module}}/tests/: conftest.py
{{cookiecutter.project_module}}/tests/data/: data_fib.py
{{cookiecutter.project_module}}/tests/unit_tests/: test_{{cookiecutter.project_module}}.py
{{cookiecutter.project_module}}/{{cookiecutter.project_module}}/: __init__.py  __main__.py  fib.py
{{cookiecutter.project_name}}/: .dockerignore  .editorconfig  .flake8  .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  pylintrc  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/reports/: .gitignore  README.md
{{cookiecutter.project_name}}/scripts/: codeFormat.py  code_format.py  readme.md
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/unitTests/: {{cookiecutter.project_name}}Tests.py
{{cookiecutter.project_name}}/tests/unit_tests/: test_{{cookiecutter.project_name}}.py  {{cookiecutter.project_name}}_tests.py
{{cookiecutter.project_name}}/{{cookiecutter.project_module}}/: __init__.py  __main__.py  exceptions.py  fib.py
{{cookiecutter.repo_module}}/tests/data/: data_fib.py
{{cookiecutter.repo_module}}/{{cookiecutter.project_module}}/: __init__.py
{{cookiecutter.repo_name}}/: Pipfile  setup.cfg  setup.py
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/tests/unit/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/tests/unit_tests/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_module}}/: __main__.py
