[tool.poetry]
name = "{{cookiecutter.project_module}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.project_author}} <{{cookiecutter.project_author_email}}>"]
packages = [
    { include = "{{cookiecutter.project_module}}" }
]

[tool.poetry.dependencies]
python = "^{python_version}"

[tool.poetry.dev-dependencies]
pytest = { version = "*" }
pytest-html = { version = "*" }
pytest-cov = { version = "*" }
pytest-metadata = { version = "*" }
pytest-xdist = { version = "*" }
pytest-aio = { version = "*" }
pytest-assume = { version = "*" }
pytest-asyncio = { version = "*" }
black = { version = "*", allow-prereleases = true }
mypy = { version = "*" }
isort = { version = "*" }
pytest-colordots = { version = "*" }
pytest-datadir = { version = "*" }
pytest-depends = { version = "*" }
pytest-mock = { version = "*" }
pytest-sugar = { version = "*" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
