[tool.poetry]
name = "{{cookiecutter.project_module}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.project_author}} <{{cookiecutter.project_author_email}}>"]
packages = [
    { include = "{{cookiecutter.project_module}}" }
]

[tool.poetry.dependencies]
python = "^{python_version}"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = { version = "*" }
mypy = { version = "*" }
poethepoet = { version = "*" }
pytest-isort = { version = "*" }
pytest-aio = { version = "*" }
pytest-assume = { version = "*" }
pytest-asyncio = { version = "*" }
pytest-black = { version = "*" }
pytest-colordots = { version = "*" }
pytest-cov = { version = "*" }
pytest-datadir = { version = "*" }
pytest-depends = { version = "*" }
pytest-html = { version = "*" }
pytest-metadata = { version = "*" }
pytest-mock = { version = "*" }
pytest-pylint = { version = "*" }
pytest-sugar = { version = "*" }
pytest = { version = "*" }
pytest-xdist = { version = "*" }

[tool.pytest.ini_options]
python_classes = "Test*"
python_files = "*Tests.py"
addopts = "-v"
testpaths = [
    "{{cookiecutter.project_module}}",
    "tests"
]
markers = [
    "unitTests: unit tests",
    "integrationTests: integration tests",
]

[tool.poe.tasks]
pytest = "pytest --isort --black --pylint -v"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
